# xpy_hackathon

./: LICENSE  README.md  app.py  main.py  project_structure.txt  pyproject.toml  requirements.txt  streamlit_app.py
finwise/core/: assistant.py  config.py  database.py  document_processor.py  tools.py  visualization_tool.py
finwise/ui/: interface.py  styles.py
finwise/ui/components/: chat.py  sidebar.py
ui/: interface.py
