[project]
name = "xpy-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.13",
    "langchain-google-genai>=0.0.5",
    "langchain-postgres>=0.0.1",
    "psycopg>=3.1.12",
    "pydantic>=2.4.2",
    "python-multipart>=0.0.6",
    "streamlit>=1.24.0",
]
