[project]
name = "xpy-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaleido==0.2.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.10",
    "langchain-google-genai>=0.0.5",
    "langchain-postgres>=0.0.5",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pgvector>=0.2.3",
    "plotly>=5.18.0",
    "psycopg>=3.1.12",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.30.0",
]
